--- a/index.html
+++ b/index.html
@@ -9,22 +9,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Webay studio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
+	<meta name="description" content="Создания сайтов.Веб студяию Webay." />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="author" content="Webay" />
 
 
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
@@ -61,7 +51,7 @@
 	<div id="fh5co-offcanvass">
 		<ul>
 			<li class="active"><a href="#" data-nav-section="home">Главная</a></li>
-			<li><a href="#" data-nav-section="features">Приемущиства</a></li>
+			<li><a href="#fh5co-features" data-nav-section="features">Почему мы</a></li>
 			<li><a href="#" data-nav-section="products">Услуги</a></li>
 			
 		
