--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<div id="fh5co-offcanvass">
 		<ul>
 			<li class="active"><a href="#" data-nav-section="home">Главная</a></li>
-			<li><a href="#fh5co-features" data-nav-section="features">Почему мы</a></li>
+			<li><a href="#" data-nav-section="features">Почему мы</a></li>
 			<li><a href="#" data-nav-section="products">Услуги</a></li>
 			
 		
@@ -297,6 +297,7 @@
 			</div>	
 		</footer>
 		
+</div>
 
 	
 	
