--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 										<img src="images/p4.jpg" class="img-responsive">
 									</figure>
 									<h3 class="fh5co-figure-lead">Интернет портал</h3>
-									<p class="fh5co-figure-text"> Новостной сайт,</p>
+									<p class="fh5co-figure-text"> Новостной сайт, инфо. сайт</p>
 								</a>
 							</div>
 
