--- a/index.html
+++ b/index.html
@@ -3,6 +3,448 @@
 	<head>
 	<title>Webay Studio</title>
 	<meta charset="utf-8">
+   <meta name="description" content="Веб студия Webay Studio. Создание сайтов. Сайт под ключ, лендинг, корпоративные сайт"> 
+    <meta name="Keywords" content="создать сайт, создать сайт бесплатно, wix создать сайт бесплатно, создать сайт самому, веб студия, сайт под ключ, разработка landing page, разработка сайт, сайт создание, лендинг пейдж, сайт продвижение создание, сайт продвижение, веб студия сокол,
+веб студия киев,
+веб студия хмельницкий,
+веб студия харьков,
+веб студия украина,
+веб студия открыть,
+веб студия орел,
+веб студия правильная,
+веб студия петух,
+веб студия преимущества,
+веб студия полтава,
+веб студия портфолио,
+веб студия под ключ,
+веб студия под ключ 3.0,
+веб студия прайм,
+веб студия партнерская программа,
+веб студия ростов,
+веб студия разработка сайтов,
+веб студия рейтинг,
+веб студия рязань,
+веб студия рефакт,
+веб студія рівне,
+веб студия реактив,
+веб студия работа,
+веб студия рефакт казань,
+веб-студия репсар,
+веб студия с нуля,
+веб студия сокол видео,
+веб студия самара,
+веб студия симферополь,
+веб студия ставрополь,
+веб студия сокол отзывы,
+веб студия создание сайтов,
+веб студия севастополь,
+веб студия сыктывкар,
+веб студия тим-сео,
+веб студия тольятти,
+веб студия тула,
+веб студія тернопіль,
+веб студия точка,
+веб студия томск,
+веб студия ташкент,
+веб студия тюмень,
+веб студия тверь,
+веб студия услуги,
+веб студии услуги,
+веб студия фреш,
+веб студия факт,
+веб студия франшиза,
+веб студия феникс,
+веб студия флаг,
+веб студия ферт,
+веб студия феникс волжский,
+веб студия фьюжн,
+веб студия фриланс,
+веб студия херсон,
+web студия харьков,
+веб студия хамелеон,
+веб студия харьков вакансии,
+веб студия хабаровск,
+веб студия хабр,
+веб студия христосенко,
+веб студия цены,
+веб студия цифровой век,
+веб студия полного цикла,
+web студия цены,
+веб студии цены,
+веб студия краснодар цены,
+студия веб дизайна цены,
+веб студия черкассы,
+веб студия чернигов,
+веб студия что это,
+веб студія чернівці,
+веб студия черновцы,
+веб студия челябинск,
+веб студия чебоксары,
+веб студия череповец,
+веб студия шаблон,
+веб студия шымкент,
+веб-студия клумба шахты,
+веб студия юнона,
+веб студия юка,
+веб-студия яворского,
+веб студия яблочко,
+веб студия яблочко челябинск,
+веб студия ягода,
+веб студия ярга,
+веб студия ялта,
+web studio 99,
+web studio 9,
+web studio 94fbr,
+лендинг это,
+лендинг пейдж,
+лендинги,
+лендинговая страница,
+лендинг конструктор,
+лендинг шаблоны,
+лендинг заказать,
+лендинг криптовалют,
+лендинг бесплатно,
+лендинг на wordpress,
+лендинг,
+лендинг примеры,
+лендинг страница,
+лендинг автозапчасти,
+лендинг автосервис,
+лендинг аренда авто,
+лендинг ателье,
+лендинг агентство недвижимости,
+лендинг автозапчасти скачать,
+лендинг айфон,
+лендинг алматы,
+лендинг астана,
+лендинг акция,
+а б тестирование лендинга,
+лендинг биткоин,
+лендинг бм,
+лендинг бизнес,
+лендинг битрикс,
+лендинг битконнект,
+лендинг бесплатные шаблоны,
+лендинг банка,
+лендинг быстро,
+лендинг блоки,
+лендинг вики,
+лендинг в инстаграм,
+лендинг видеонаблюдение,
+лендинг вк,
+лендинг вакансии,
+лендинг вконтакте,
+лендинг веб студии,
+лендинг верстка,
+лендинг в фотошопе,
+лендинг визитка,
+лендинг в adobe muse,
+лендинг в канаде,
+лендинг в астане,
+лендинг в аренду,
+лендинг в контакте,
+лендинг в алматы,
+лендинг в монреале,
+лендинг в вк,
+лендинг генератор,
+лендинг грузоперевозки,
+лендинг гироскутер,
+лендинг гостиницы,
+лендинг грузчики,
+лендинг грузоперевозки скачать,
+лендинг гарантия,
+лендинг готовый,
+landing грузоперевозки,
+лендинг гранит,
+лендинг для инстаграм,
+лендинг дизайн
+лендинг для интернет магазина,
+лендинг дешево,
+лендинг для wordpress,
+лендинг для салона красоты,
+лендинг для вебинара,
+лендинг джино,
+лендинг дизайнера,
+лендинг доставка еды,
+лендинг екатеринбург,
+лендинг елки,
+лендинг еда,
+экстрим лендинг,
+difficult landing егэ,
+crash landing егэ,
+landing page екатеринбург,
+лендинг пейдж екатеринбург,
+какво е лендинг страница,
+лендинг под ключ,
+лендинг на вордпресс,
+лендинг жилой комплекс,
+лендинг жидкое стекло,
+лендинг женской одежды,
+лендинг жалюзи,
+лендинг жк,
+лендинг животные,
+лендинг женская тематика,
+лендинг живопись,
+жалюзи landing page,
+лендинг заказать цена,
+лендинг за 5000,
+лендинг за час,
+лендинг заработок,
+лендинг за 500 рублей,
+лендинг заправка картриджей,
+лендинг за 5 минут,
+лендинг за 1000,
+лендинг зачем нужен,
+лендинг инстаграм,
+лендинг или сайт,
+лендинг интернет магазин,
+лендинг или лендинг,
+лендинг игрушки,
+лендинг игры,
+лендинг иркутск,
+лендинг инфобизнес,
+лендинг интернет магазин шаблон,
+лендинг и сео,
+лендинг и директ,
+лендинги конверсия,
+ролл и лендинг,
+сайт визитка и лендинг пейдж,
+создание сайтов и лендингов,
+лендинг йога,
+лендинг купить,
+лендинг клаб,
+лендинг криптовалют это,
+лендинг кондитерская,
+лендинг косметика,
+лендинг курсы,
+лендинг компании,
+лендинг картинки,
+требования к лендингу,
+требования к лендинг пейдж,
+подключить робокассу к лендингу,
+лендинг лп,
+лендинг лучшие,
+лендинг лестницы,
+лендинг лучшие примеры,
+лендинг личного помощника,
+лендинг лурк,
+лендинг ландшафтный дизайн,
+лучшие landing page 2015,
+лучшие landing page рунета,
+лучший лендинг конструктор,
+лендинг мероприятия,
+лендинг мебель,
+лендинг магазина,
+лендинг макет,
+лендинг маркетинг,
+лендинг магазина одежды,
+лендинг медицина,
+лендинг маникюр,
+лендинг массаж,
+лендинг мобильного приложения,
+лендинг на заказ,
+лендинг на тильде,
+лендинг недвижимость,
+лендинг на bootstrap,
+лендинг на joomla,
+лендинг недорого,
+лендинг на wix,
+лендинг новосибирск,
+лендинг на html,
+лендинг онлайн,
+лендинг отзывы,
+лендинг определение,
+лендинг одежда,
+лендинг образец,
+лендинг обучение,
+лендинг одностраничник,
+лендинг окей,
+лендинг окна,
+лендинг отеля,
+все о лендинг пейдж,
+все о лендинге,
+отзывы о лендинг пейдж,
+отзывы о лендингах,
+блог о лендингах,
+вся правда о лендинг пейдж,
+лендинг пейдж цена,
+лендинг пейдж шаблоны,
+лендинг пейдж конструктор,
+лендинг пейдж бесплатно,
+лендинг портфолио,
+лендинг пейдж создать,
+лендинг пейдж купить,
+лендинг пейдж структура,
+лендинг п,
+лендинг ремонт,
+лендинг реклама,
+лендинг резюме,
+лендинг разработка,
+лендинг ремонт телефонов,
+лендинг ремонт компьютеров,
+лендинг размеры,
+лендинг риэлтора,
+лендинг рекламного агентства,
+лендинг ресторана,
+лендинг сайт,
+лендинг создать,
+лендинг сайт это,
+лендинг стоимость,
+лендинг создать бесплатно,
+лендинг сайт пример,
+лендинг своими руками,
+лендинг скачать,
+лендинг сделать,
+лендинги с высокой конверсией,
+лендинг с параллаксом,
+лендинг с корзиной,
+лендинги с высокой конверсией примеры,
+лендинг с нуля,
+лендинг с видео,
+лендинг с админкой,
+лендинг с видеофоном,
+лендинг с гарантией конверсии,
+лендинг с оплатой,
+лендинг типового ico,
+лендинг тильда,
+лендинг топ,
+лендинг туристического агентства,
+лендинг турфирма,
+лендинг такси,
+лендинг туризм,
+лендинг торты на заказ,
+лендинг торговля,
+лендинг турагентство,
+лендинг услуги,
+лендинг уфа,
+лендинг урок,
+лендинг украина,
+лендинг умные часы,
+лендинг угги,
+лендинг украшения,
+лендинг установка дверей,
+лендинг умный дом,
+лендинг услуги электрика,
+какая конверсия у лендинга,
+у кого заказать лендинг,
+лендинг фотографа,
+лендинг фриланс,
+лендинг фото,
+лендинг фотошоп,
+лендинг финансы,
+лендинг форма захвата,
+лендинг франшиза,
+лендинг форма обратной связи,
+лендинг фитнес клуб,
+лендинг фитнес,
+лендинг хостинг,
+лендинг хамелеон,
+лендинг хабрахабр,
+лендинг харьков,
+лендинг художника,
+лендинг хостел,
+лендинг хомяк,
+лендинг химчистка,
+химчистка лендинг,
+хороший лендинг,
+лендинг цена,
+лендинг цена спб,
+лендинг цветочного магазина,
+лендинг цена киев,
+landing цена,
+landing цветы,
+лендинг цемент
+лендинг цена минск,
+лендинг цветов,
+лендинг что это,
+лендинг часы,
+лендинг челябинск,
+лендинг что продавать,
+landing что это,
+landing что такое,
+лендинг чай,
+landing чай,
+landing что это такое,
+лендинг что входит,
+лендинг шаблон wordpress,
+лендинг шаблон бесплатно,
+лендинг шаблон скачать,
+лендинг шаблоны joomla,
+лендинг шины,
+лендинг шубы,
+лендинг шаблон joomla 3,
+лендинг шаблоны html,
+лендинг шаблон скачать бесплатно,
+лендинг opencart,
+лендинг щебень,
+landing page що це,
+landing page щебень,
+лендинг по продаже щенков,
+студия orange лендинг,
+ok google лендинг,
+лендинг это википедия,
+лендинг это примеры,
+лендинг электромонтаж,
+лендинг электрика,
+лендинг эффективность,
+лендинг электромонтажные работы,
+лендинг электронные сигареты,
+лендинг эвакуатор,
+лендинг электрошокер,
+лендинг юридических услуг,
+лендинг юриста,
+лендинг ювелирный,
+лендинг юа,
+лендинг ютуб,
+лендинг юридическая фирма,
+юридический лендинг,
+юрист landing page,
+юридический landing page,
+юзабилити landing page,
+лендинг языковой школы,
+лендинг яндекс директ,
+лендинг ярославль,
+лендинг яндекс,
+лендинг якоря,
+лендинг ягоды годжи,
+яркий лендинг,
+якоря landing page,
+2014 landing on comet,
+joomla 3 лендинг,
+3 landing rd essex ma,
+3 landing drive methuen ma,
+50 landing net,
+лендинг 5,
+5 landing pages,
+5 landing way dover nh,
+landing 67p,
+
+60 landing factor,
+comet landing 67p,
+iphone 6 лендинг,
+
+6 landing lane,
+landing 747,
+
+82 landing ave colchester vt,
+landing dash 8,
+лендинг за 80 минут,
+8 landing trail denville nj,
+81 landing drive albany,
+8180 landing south atlanta ga,
+8224 landing court denver nc,
+805 landing point,
+8 landing drive mangere,
+8 landing lane,
+
+99designs landing page,
+92 landing drive albany,
+wabash landing 9 showtimes,
+wabash landing 9 movie times,
+landing falcon 9,
+lafayette landing 9,
+9 landing road huntington,
+"> 
 	<link rel="icon" href="http://dzyngiri.com/favicon.png" type="image/x-icon">
     <link rel="shortcut icon" href="http://dzyngiri.com/favicon.png" type="image/x-icon" />
     <meta name="description" content="Codester is a free responsive Bootstrap template by Dzyngiri">
