--- a/index.html
+++ b/index.html
@@ -445,6 +445,8 @@ landing falcon 9,
 lafayette landing 9,
 9 landing road huntington,
 "> 
+
+<meta name="author" content="Webay Studio" >
 	<link rel="icon" href="http://dzyngiri.com/favicon.png" type="image/x-icon">
     <link rel="shortcut icon" href="http://dzyngiri.com/favicon.png" type="image/x-icon" />
     <meta name="description" content="Codester is a free responsive Bootstrap template by Dzyngiri">
@@ -654,13 +656,13 @@ lafayette landing 9,
               <h3 style="font-size: 40px;color: white;">Напишите нам!</h3>
                 <div class="wrapper">
                     <ul class="list list-pad">
-                          <li><a href="#" target="_blank">VK</a></li>
-                          <li><a href="#" target="_blank">Facebook</a></li>
+                          <li><a href="https://vk.com/web.oleg" target="_blank">VK</a></li>
+                          <li><a href="https://www.facebook.com/web.oleg.ua" target="_blank">Facebook</a></li>
       
                         </ul>
                     <ul class="list list-pad">
-                       <li><a href="#" target="_blank">Telegram</a></li>
-                          <li><a href="#" target="_blank">Написать на почту</a></li>
+                       <li><a href="https://t.me/web_oleg" target="_blank">Telegram</a></li>
+                          <li><a href="mailto:web.webay@gmail.com" target="_blank">Написать на почту</a></li>
                                              </ul>
                     <ul class="list list-pad">
                        
