--- a/index.html
+++ b/index.html
@@ -448,10 +448,8 @@ lafayette landing 9,
 
 <meta name="author" content="Webay Studio" >
 	<link rel="icon" href="http://dzyngiri.com/favicon.png" type="image/x-icon">
-    <link rel="shortcut icon" href="http://dzyngiri.com/favicon.png" type="image/x-icon" />
-    <meta name="description" content="Codester is a free responsive Bootstrap template by Dzyngiri">
-    <meta name="keywords" content="free, template, bootstrap, responsive">
-    <meta name="author" content="Inbetwin Networks">  
+
+    <meta name="author" content="Webay">  
 	<link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="css/responsive.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
